# AI-Influencer

./: .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/agents/: verifier.md
.cursor/commands/: run-tests-and-fix.md
.cursor/rules/: agent.mdc  chimera.mdc
.github/workflows/: main.yml
docs/: MCP_SENSE_VERIFICATION.md
research/: tooling_strategy.md
skills/: README.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_video/: README.md
skills/skill_publish_content/: README.md
specs/: README.md  _meta.md  functional.md  openclaw_integration.md  technical.md
src/chimera/: __init__.py
tests/: __init__.py  test_placeholder.py  test_skills_interface.py  test_trend_fetcher.py
