[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-chimera"
version = "0.1.0"
description = "Production-grade AI agent system (Project Chimera)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Core runtime (minimal; add as agent grows)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Optional extras for install: pip install -e ".[dev,tools]"
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]
tools = [
    "mcp>=1.0.0",
]

# PEP 735 dependency groups (uv-native; not shipped with package)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]
tools = [
    "mcp>=1.0.0",
]

[tool.uv]
# Use dependency groups for reproducible dev environment
default-groups = ["dev"]
# Pin Python for reproducible envs (optional; uncomment to enforce)
# python = "3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/chimera"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
